logs/slurm-5866.out
  File "slayer_network_rgb.py", line 127
    500))
        ^
SyntaxError: invalid syntax
